--- a/src/ServiceLifetimeDemonstration/Pages/Trimmed.cshtml
+++ b/src/ServiceLifetimeDemonstration/Pages/Trimmed.cshtml
@@ -1,6 +1,7 @@
 @page
-@model ServiceLifetimeDemonstration.Pages.BoomModel
+@model TrimmedModel
 @{
+    ViewData["Title"] = "Service Lifetimes";
 }
 
 <div class="text-center">
